# HongGrader

./: .gitignore  QLDiemTHPT_1.sql  QueryQLDiemTHPT.sql  QueryQLlDiemTHPT.sql  README.md  SQLQuery_Insert_Data.sql
HongGrader/: CMakeLists.txt  boolitemdelegate.cpp  boolitemdelegate.h  chuyenlop.cpp  chuyenlop.h  chuyenlop.ui  dangnhap.cpp  dangnhap.h  dangnhap.ui  genderitemdelegate.cpp  genderitemdelegate.h  helper.cpp  helper.h  hoptracuuhocsinh.cpp  hoptracuuhocsinh.h  hoptracuuhocsinh.ui  main.cpp  quanlydiem.cpp  quanlydiem.h  quanlydiem.ui  quanlygiaovien.cpp  quanlygiaovien.h  quanlygiaovien.ui  quanlyhocsinh.cpp  quanlyhocsinh.h  quanlyhocsinh.ui  quanlylophoc.cpp  quanlylophoc.h  quanlylophoc.ui  quanlynamhoc.cpp  quanlynamhoc.h  quanlynamhoc.ui  quanlytaikhoan.cpp  quanlytaikhoan.h  quanlytaikhoan.ui  scoreitemdelegate.cpp  scoreitemdelegate.h  scoremodel.cpp  scoremodel.h  tableexporter.cpp  (+7 more)
